fix overflow

--- a/dsc/dsc.component.scss
+++ b/dsc/dsc.component.scss
@@ -93,11 +93,10 @@
 	.navbar > * {
 		min-width: 0;
 		min-height: 0;
-		overflow: hidden;
+		// overflow: hidden;
 	}
 
 	.navbar {
-		width: 100%;
 		
 		// Main Navbar text
 	  h3 {
